<resources>
    <string name="app_name">VeterinaryPharmacy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_accept_to_the_terms_and_conditions">I accept to the Terms and Conditions</string>
    <string name="signup_now">Signup now</string>
    <string name="login">Login</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_with_prescriptions">Order With Prescriptions</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="top_rated">Top Rated</string>
    <string name="add">Add</string>
    <string name="select_qty">Select QTY</string>
    <string name="check_delivery">Check Delivery</string>
    <string name="check">Check</string>
    <string name="product_details">Product Details</string>
    <string name="product_review">Product Review</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="order_total">Order Total</string>
    <string name="shipping">Shipping</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="apply">Apply</string>
    <string name="app_promocode">App Promocode</string>
    <string name="remove">Remove</string>
    <string name="your_cart">Your Cart</string>
    <string name="signin">Signin</string>
    <string name="done">Done</string>
</resources>