<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.activity.SignupActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:id="@+id/top_rel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/back_btn"
                        android:layout_width="@dimen/back_arrow_size"
                        android:layout_height="@dimen/back_arrow_size"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="@dimen/_10sdp"
                        android:rotation="180"
                        app:srcCompat="@drawable/ic_black_arrow" />


                    <TextView
                        android:id="@+id/sign_up_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/back_btn"
                        android:layout_marginLeft="@dimen/_18sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/signup"
                        android:textColor="@color/black"
                        android:textSize="@dimen/extra_extra_big_text_size"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_8sdp"
                        android:layout_below="@+id/sign_up_heading"
                        android:layout_alignLeft="@+id/sign_up_heading"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/rounded_login_btn" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/name"
                    style="@style/EditTextLogin"
                    android:layout_below="@+id/top_rel"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/name" />

                <LinearLayout
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="horizontal"

                    >


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />


                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </LinearLayout>

                <EditText
                    android:id="@+id/email"
                    style="@style/EditTextLogin"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:layout_below="@+id/gender_radio_group"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/email_id"

                    />

                <EditText
                    android:id="@+id/phone_no"
                    style="@style/EditTextLogin"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/phone_number"

                    />

                <EditText
                    android:id="@+id/password"
                    style="@style/EditTextLogin"
                    android:layout_below="@+id/phone_no"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/password"

                    />

                <CheckBox
                    android:id="@+id/terms_and_condition_chk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/i_accept_to_the_terms_and_conditions" />

                <Button
                    android:id="@+id/signup"
                    style="@style/LoginButtonStyle"
                    android:layout_below="@+id/terms_and_condition_chk"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/rounded_login_btn"
                    android:text="@string/signup_now" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account ?"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/login"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/login"
                        android:textColor="@color/black" />

                </LinearLayout>
            </RelativeLayout>


        </ScrollView>

    </RelativeLayout>
</layout>
