<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".cart.activity.CartActivity">


        <include
            android:id="@+id/top"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkout_btn"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@+id/top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_list_rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <RelativeLayout
                    android:id="@+id/payment_summary_rel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cart_list_rec"
                    android:padding="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/order_summary_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_summary"
                        android:textColor="@color/black"
                        android:textSize="@dimen/extra_big_text_size"
                        android:textStyle="bold"

                        />


                    <TextView
                        android:id="@+id/order_total_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order_summary_txt"
                        android:layout_alignLeft="@+id/order_summary_txt"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/order_total"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/meduim_text_size"

                        />

                    <TextView
                        android:id="@+id/order_total_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order_summary_txt"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:text="1700 PKR"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/meduim_text_size"

                        />

                    <TextView
                        android:id="@+id/order_shipping_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order_total_txt"
                        android:layout_alignLeft="@+id/order_summary_txt"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/shipping"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/meduim_text_size"

                        />

                    <TextView
                        android:id="@+id/order_shipping_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order_total_txt"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:text="500 PKR"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/meduim_text_size"

                        />

                    <TextView
                        android:id="@+id/order_discount_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order_shipping_txt"
                        android:layout_alignLeft="@+id/order_summary_txt"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/discount"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/meduim_text_size"

                        />


                    <TextView
                        android:id="@+id/order_discount_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/order_shipping_txt"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:text="300 PKR"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/meduim_text_size"

                        />


                    <View
                        android:id="@+id/seper"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/order_discount_value"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/dark_grey" />

                    <TextView
                        android:id="@+id/total_amount_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/seper"
                        android:layout_alignLeft="@+id/order_summary_txt"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/total_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/meduim_text_size"

                        />

                    <TextView
                        android:id="@+id/total_amount_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/seper"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:text="1000 PKR "
                        android:textColor="@color/black"
                        android:textSize="@dimen/meduim_text_size"

                        />



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_15sdp"
                        android:layout_below="@+id/total_amount_value"
                        android:layout_marginTop="@dimen/_20sdp"
                        >

                        <EditText
                           style="@style/EditTextLogin"
                            android:background="@null"
                            android:id="@+id/promo_edt"
                            android:hint="@string/app_promocode"
                            android:textSize="@dimen/_18sdp"
                            android:gravity="start|center"
                            android:layout_width="@dimen/_250sdp"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_below="@+id/promo_edt"
                            android:background="@color/dark_grey"
                            />


                        <Button
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text="@string/apply"
                            android:layout_centerVertical="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/normal_text_size"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/rounded_login_btn"
                            />


                    </RelativeLayout>
                </RelativeLayout>

            </RelativeLayout>
        </ScrollView>


    <Button

   style="@style/LoginButtonStyle"
        android:background="@drawable/rounded_login_btn"
        android:layout_alignParentBottom="true"
        android:id="@+id/checkout_btn"
        android:layout_marginRight="@dimen/_20sdp"
        android:textSize="@dimen/big_text_size"
        android:text="Checkout"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        />


    </RelativeLayout>
</layout>
